# new-website

./: index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
blog/article0/: index.html
docs/: education.md  index.md  projects.md  test.md  work.md
docs/blog/: article0.md
docs/overrides/extra-javascript/: copy-math.js
docs/stylesheets/: extra.css
education/: index.html
hooks/: typst_math.py
overrides/extra-javascript/: copy-math.js
projects/: index.html
search/: search_index.json
stylesheets/: extra.css
work/: index.html
