[project]
name = "new-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-blog-plugin>=0.25",
    "mkdocs-shadcn>=0.9.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.16.1",
]
